changed padding values to fix footer spacing on iPhone XR landscape orientation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -694,7 +694,7 @@ margin: 5px 8px;
 
     #footer-container {
         padding: 0px;
-        padding-left: 50px;
+        padding-left: 20px;
     }
 
     .footer {
@@ -888,8 +888,8 @@ margin: 5px 8px;
     }
 
     .footer-sponsor {
-        margin: 0px 30px;
-        padding-left: 35px;
+        margin: 0px 10px;
+        padding-left: 5px;
         width: 210px;
     }
 
@@ -1740,7 +1740,7 @@ margin: 5px 8px;
     }
 
     .footer-sponsor {
-        margin: 0px 20px 0px 5px;
+        margin: 0px 20px;
         padding-left: 40px;
         width: auto;
     }
